--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@headless-tree/core": "workspace:*",
     "@headless-tree/react": "workspace:*"
   },
+  "packageManager": "yarn@4.1.1",
   "volta": {
     "node": "23.6.1",
     "yarn": "4.1.1"
