--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "verify": "yarn lint && lerna run build,build:esm,test --stream"
   },
   "dependencies": {
-    "@changesets/cli": "patch:@changesets/cli@npm%3A2.29.7#~/.yarn/patches/@changesets-cli-npm-2.29.7-d06a80abdb.patch",
+    "@changesets/cli": "^2.27.5",
     "@lukasbach/eslint-config-deps": "^1.0.7",
     "@types/node": "22.10.7",
     "@types/react": "18.2.66",
@@ -39,7 +39,6 @@
     "@headless-tree/core": "workspace:*",
     "@headless-tree/react": "workspace:*"
   },
-  "packageManager": "yarn@4.1.1",
   "volta": {
     "node": "23.6.1",
     "yarn": "4.1.1"
